fix: lang-switch mobile spacing

--- a/packages/components/src/components/telekom/telekom-nav-list/telekom-nav-list.css
+++ b/packages/components/src/components/telekom/telekom-nav-list/telekom-nav-list.css
@@ -74,7 +74,12 @@
   --_spacing-x-slotted: var(--_spacing-x-slotted-meta-nav);
 }
 .scale-telekom-nav-list[variant='lang-switcher'] {
-  --_spacing-x-slotted: var(--_spacing-x-slotted-lang-switcher);
+  --_spacing-x-slotted: var(--telekom-spacing-unit-x6);
+}
+@media screen and (--lg) {
+  .scale-telekom-nav-list[variant='lang-switcher'] {
+    --_spacing-x-slotted: var(--telekom-spacing-unit-x2);
+  }
 }
 .scale-telekom-nav-list[variant='main-nav'] {
   --_spacing-x-slotted: var(--_spacing-x-slotted-main-nav);
